--- a/sass/partials/sections/_about.scss
+++ b/sass/partials/sections/_about.scss
@@ -156,29 +156,26 @@
     }
 }
 //===== Target IE Specifically =====//
-// @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-//     .about {
-//         display: inline-block;
-//         color: $white;
-//         @include flexcolumn;
-//         justify-content: space-between;
-//         @media screen and (max-width: $break-m) {
-//             padding: 50px 15px;
-//         }
-//         @media screen and (min-width: $break-m) {
-//             padding: 50px 15px 50px 15px;
-//             @include mginlrauto;
-//             width: 750px;
-//             // height: 393px !important;
-//         }
-//         @media screen and (min-width: $break-lg) {
-//             padding: 30px 15px 0px 15px;
-//             width: 970px;
-//         }
-//         @media screen and (min-width: $break-xl) {
-//             padding: 30px 15px 0px 15px;
-//             @include mginlrauto;
-//             width: 1200px;
-//         }
-//     }
-// }
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    .about-wrapper {
+        display: flex;
+        align-items: center;
+    }
+    .about {
+        display: inline-block;
+        @media screen and (min-width: $break-m) {
+            padding: 36px 15px 36px 15px;
+            @include mginlrauto;
+            width: 750px;
+        }
+        @media screen and (min-width: $break-lg) {
+            padding: 30px 15px 0px 15px;
+            width: 970px;
+        }
+        @media screen and (min-width: $break-xl) {
+            padding: 30px 15px 0px 15px;
+            @include mginlrauto;
+            width: 1200px;
+        }
+    }
+}
