--- a/sass/partials/sections/_header-nav.scss
+++ b/sass/partials/sections/_header-nav.scss
@@ -50,7 +50,7 @@
         flex-flow: row wrap;
         align-items: center;
         @include mginlrauto;
-        padding-top: 28px;
+        padding-top: 16px;
     }
     //Medium and up
     @media screen and (min-width: $break-m) {
@@ -66,6 +66,7 @@
     //Large and Up
     @media screen and (min-width: $break-lg) {
         display: flex;
+        justify-content: space-between;
         @include mginlrauto;
         padding: 20px 15px 19px 15px;
         width: 970px;
@@ -73,6 +74,7 @@
     //Extra Large
     @media screen and (min-width: $break-xl) {
         display: flex;
+        justify-content: space-between;
         @include mginlrauto;
         padding: 20px 15px 20px 15px;
         width: 1200px;
@@ -136,13 +138,13 @@
         order: 1;
         padding-right: 15px;
         padding-bottom: 8px;
-        margin-right: 60px;
+        margin-right: 70px;
     }
     //X-large devices
     @media screen and (min-width: $break-xl) {
         padding-right: 4px;
-        margin-right: 0;
-        width: 41.66666667%;
+        margin-right: 60px;
+        flex: 0 1 33.333%;
         order: 1;
     }
 }
@@ -173,7 +175,7 @@
     }
     //Extra Large
     @media screen and (min-width: $break-xl) {
-        width: 84%;
+        width: 100%;
     }
 }
 //===== LOGO STYLING ENDS =====//
@@ -241,7 +243,7 @@
         width: 136px;
         @include flexalignctr;
         white-space: nowrap;
-        margin-right: 28px;
+        margin-right: 16px;
     }
     //Extra Large
     @media screen and (min-width: $break-xl) {
@@ -285,7 +287,7 @@
         order: 3;
         @include flexalignctr;
         white-space: nowrap;
-        margin-right: 16px;
+        margin-right: 0;
     }
     //Extra Large
     @media screen and (min-width: $break-xl) {
@@ -906,3 +908,8 @@ form.search-form {
     }
 }
 //========== CARDS SECTION ENDS ==========//
+
+//===== Target IE Specifically =====//
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    
+}
